src/test/deca/context/invalid/ParamVoidDecl.deca
// Description:
//    void type in params
//
// Resultats:
//    Erreur
//
// Historique:
//    cree le 04/01/2023

class A {
	protected int x;
	void setX(void b){
	}
}

